--- a/.github/ISSUE_TEMPLATE/1-bug-report.en-US.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug-report.en-US.yml
@@ -1,7 +1,7 @@
 name: '🐞 Bug Report'
 description: Report a Bug to Rspress
 title: '[Bug]: '
-labels: ['bug']
+labels: ['🐞 bug']
 body:
   - type: markdown
     attributes:
@@ -16,7 +16,7 @@ body:
     id: versions
     attributes:
       label: Version
-      description: Run `npx envinfo --system --browsers --npmPackages '@rspress/*'` in your project, and paste the output into the textarea below.
+      description: Run `npx envinfo --system --browsers --npmPackages '{@rspress/*,rspress}'` in your project, and paste the output into the textarea below.
       placeholder: |
         System:
         Browsers:
