--- a/.github/ISSUE_TEMPLATE/2-feature-request.en-US.yml
+++ b/.github/ISSUE_TEMPLATE/2-feature-request.en-US.yml
@@ -1,7 +1,7 @@
-name: '✨ Feature Request'
+name: '💡 Feature Request'
 description: Submit a new feature request to Rspress
 title: '[Feature]: '
-labels: ['✨ feature request']
+labels: ['💡 feature']
 body:
   - type: markdown
     attributes:
