--- a/e2e/fixtures/plugin/package.json
+++ b/e2e/fixtures/plugin/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^18",
     "react-transition-group": "4.4.5",
     "rspress": "workspace:*",
-    "@rspress/shared": "workspace:*"
+    "@rspress/shared": "workspace:*",
+    "@rspress/plugin-preview": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^14"
