--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -41,11 +41,13 @@
     "qrcode.react": "^3.1.0",
     "remark-gfm": "3.0.1",
     "rspack-plugin-virtual-module": "0.1.12",
-    "codesandbox": "2.2.3"
+    "codesandbox": "2.2.3",
+    "lodash": "4.17.21"
   },
   "devDependencies": {
     "@types/mdast": "^3.0.10",
     "@types/node": "^18.11.17",
+    "@types/lodash": "4.14.200",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "mdast-util-mdxjs-esm": "^1.3.0",
