--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -51,19 +51,19 @@
     "dist/"
   ],
   "dependencies": {
-    "@rspress/shared": "workspace:*",
     "@loadable/component": "5.15.2",
     "@mdx-js/loader": "2.2.1",
     "@mdx-js/mdx": "2.2.1",
     "@mdx-js/react": "2.2.1",
     "@modern-js/builder": "2.37.1",
     "@modern-js/builder-rspack-provider": "2.37.1",
-    "@rspress/plugin-medium-zoom": "workspace:*",
-    "@rspress/plugin-last-updated": "workspace:*",
-    "@rspress/plugin-auto-nav-sidebar": "workspace:*",
-    "@rspress/mdx-rs": "0.4.0",
-    "@rspress/plugin-container-syntax": "workspace:*",
     "@modern-js/utils": "2.37.1",
+    "@rspress/mdx-rs": "0.4.0",
+    "@rspress/plugin-auto-nav-sidebar": "workspace:*",
+    "@rspress/plugin-container-syntax": "workspace:*",
+    "@rspress/plugin-last-updated": "workspace:*",
+    "@rspress/plugin-medium-zoom": "workspace:*",
+    "@rspress/shared": "workspace:*",
     "@types/compression": "^1.7.2",
     "@types/polka": "^0.5.4",
     "autoprefixer": "10.4.13",
@@ -77,6 +77,8 @@
     "globby": "11.1.0",
     "hast-util-from-html": "^1.0.0",
     "html-to-text": "^9.0.3",
+    "htmr": "^1.0.2",
+    "is-html": "^3.0.0",
     "jsdom": "20.0.3",
     "lodash-es": "^4.17.21",
     "mdast-util-mdxjs-esm": "^1.3.0",
@@ -100,6 +102,7 @@
     "remark-html": "^15.0.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
+    "rspack-plugin-virtual-module": "0.1.12",
     "sirv": "^2.0.2",
     "source-map": "0.7.4",
     "string-replace-loader": "^3.1.0",
@@ -107,8 +110,7 @@
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1",
     "unist-util-visit-children": "^2.0.1",
-    "yaml-front-matter": "^4.1.1",
-    "rspack-plugin-virtual-module": "0.1.12"
+    "yaml-front-matter": "^4.1.1"
   },
   "devDependencies": {
     "@modern-js/plugin-tailwindcss": "2.37.1",
