--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "bump": "modern bump",
     "pre": "modern pre",
     "prepare": "npm run build && husky install",
-    "dev": "cross-env NX_DAEMON=false nx run-many -t dev --exclude @rspress-fixture/*",
-    "build": "cross-env NX_DAEMON=false nx run-many -t build --exclude @rspress-fixture/*",
+    "dev": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run-many -t dev --exclude @rspress-fixture/*",
+    "build": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run-many -t build --exclude @rspress-fixture/*",
     "test": "pnpm test:unit && pnpm test:e2e",
-    "test:unit": "cross-env NX_DAEMON=false nx run-many -t test --exclude @rspress-fixture/*",
+    "test:unit": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run-many -t test --exclude @rspress-fixture/*",
     "test:e2e": "playwright test",
     "change-status": "modern change-status",
     "gen-release-note": "modern gen-release-note",
@@ -19,8 +19,8 @@
     "deploy": "modern deploy",
     "lint": "modern lint",
     "upgrade": "modern upgrade",
-    "dev:website": "cross-env NX_DAEMON=false nx run @rspress/docs:dev",
-    "build:website": "cross-env NX_DAEMON=false nx run @rspress/docs:build",
+    "dev:website": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run @rspress/docs:dev",
+    "build:website": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run @rspress/docs:build",
     "preview:website": "cd packages/document && npm run preview",
     "update:modern": "ts-node ./scripts/update-modern.ts"
   },
