--- a/packages/plugin-playground/tsconfig.json
+++ b/packages/plugin-playground/tsconfig.json
@@ -10,17 +10,10 @@
     "lib": ["ESNext", "DOM"],
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "noEmit": true,
     "paths": {
       "@/*": ["./*"]
     }
   },
-  "include": [
-    "src",
-    "vitest.config.ts",
-    "index.d.ts",
-    "static/",
-    "modern.config.ts"
-  ],
-  "exclude": ["runtime.d.ts", "theme.d.ts", "node_modules", "dist"]
+  "include": ["src", "vitest.config.ts", "index.d.ts", "modern.config.ts"],
+  "exclude": ["node_modules", "dist"]
 }
