--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -55,9 +55,10 @@
     "@mdx-js/loader": "2.2.1",
     "@mdx-js/mdx": "2.2.1",
     "@mdx-js/react": "2.2.1",
-    "@modern-js/utils": "2.38.0",
-    "@modern-js/builder": "2.38.0",
-    "@modern-js/builder-rspack-provider": "2.38.0",
+    "@modern-js/utils": "2.39.0",
+    "@rsbuild/core": "0.0.10",
+    "@rsbuild/plugin-react": "0.0.10",
+    "@rsbuild/plugin-svgr": "0.0.10",
     "@rspress/theme-default": "workspace:*",
     "@rspress/runtime": "workspace:*",
     "@rspress/plugin-medium-zoom": "workspace:*",
@@ -114,10 +115,10 @@
     "yaml-front-matter": "^4.1.1"
   },
   "devDependencies": {
-    "@modern-js/plugin-tailwindcss": "2.38.0",
-    "@modern-js/plugin-testing": "2.38.0",
-    "@modern-js/tsconfig": "2.38.0",
-    "@modern-js/types": "2.38.0",
+    "@modern-js/plugin-tailwindcss": "2.39.0",
+    "@modern-js/plugin-testing": "2.39.0",
+    "@modern-js/tsconfig": "2.39.0",
+    "@modern-js/types": "2.39.0",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/fs-extra": "^9.0.13",
     "@types/hast": "^2.3.4",
