--- a/e2e/fixtures/plugin/package.json
+++ b/e2e/fixtures/plugin/package.json
@@ -13,7 +13,8 @@
     "react-transition-group": "4.4.5",
     "rspress": "workspace:*",
     "@rspress/shared": "workspace:*",
-    "@rspress/plugin-preview": "workspace:*"
+    "@rspress/plugin-preview": "workspace:*",
+    "@rspress/plugin-playground": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^14"
