--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -42,11 +42,9 @@
     "dist/"
   ],
   "dependencies": {
-    "htmr": "^1.0.2",
-    "is-html": "^3.0.0",
-    "@rspress/shared": "workspace:*",
     "@mdx-js/react": "2.2.1",
     "@rspress/runtime": "workspace:*",
+    "@rspress/shared": "workspace:*",
     "body-scroll-lock": "4.0.0-beta.0",
     "copy-to-clipboard": "^3.3.3",
     "flexsearch": "0.6.32",
@@ -54,6 +52,8 @@
     "globby": "11.1.0",
     "hast-util-from-html": "^1.0.0",
     "html-to-text": "^9.0.3",
+    "htmr": "^1.0.2",
+    "is-html": "^3.0.0",
     "jsdom": "20.0.3",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
@@ -61,12 +61,11 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-syntax-highlighter": "^15.5.0",
+    "rspack-plugin-virtual-module": "0.1.12",
     "string-replace-loader": "^3.1.0",
-    "tailwindcss": "3.2.7",
-    "rspack-plugin-virtual-module": "0.1.12"
+    "tailwindcss": "3.2.7"
   },
   "devDependencies": {
-    "@types/is-html": "^2.0.1",
     "@modern-js/plugin-tailwindcss": "2.39.2",
     "@modern-js/plugin-testing": "2.39.2",
     "@modern-js/tsconfig": "2.39.2",
@@ -74,12 +73,14 @@
     "@types/body-scroll-lock": "^3.1.0",
     "@types/hast": "^2.3.4",
     "@types/html-to-text": "^8.1.1",
+    "@types/is-html": "^2.0.1",
     "@types/jest": "^26.0.9",
     "@types/lodash-es": "^4.17.6",
     "@types/mdast": "^3.0.10",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.9",
     "gray-matter": "4.0.3",
     "husky": "^8",
     "lint-staged": "~13.1.0",
