docs: copy content

--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -24,8 +24,7 @@
     "@types/react": "18.2.0",
     "@documate/documate": "^0.1.0",
     "@documate/react": "0.2.1",
-    "framer-motion": "10.16.4",
-    "@rspress/plugin-shiki": "workspace:*"
+    "framer-motion": "10.16.4"
   },
   "publishConfig": {
     "access": "public",
