--- a/.github/ISSUE_TEMPLATE/1-bug-report.en-US.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug-report.en-US.yml
@@ -37,7 +37,7 @@ body:
     id: repro
     attributes:
       label: Reproduce link
-      description: 'Please provide a simplest reproduction of the problem (minimal demo without redundant dependencies). You can create it on CodePen ([<kbd>⌘</kbd>Click here to open the template](https://codepen.io/Justineo/pen/yLbxxOR)), or provide the URL of the project:'
+      description: 'Please provide a simplest reproduction of the problem (minimal demo without redundant dependencies). You can create it on CodeSandbox ([<kbd>⌘</kbd>Click here to open the template](https://codesandbox.io/s/github/web-infra-dev/rspress-codesandbox-template)), or provide the URL of the project:'
       placeholder: paste link here
     validations:
       required: true
