--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -31,7 +31,7 @@
     "upgrade": "modern upgrade"
   },
   "dependencies": {
-    "@rsbuild/core": "0.0.0-next-20231115072032",
+    "@rsbuild/core": "0.0.23",
     "unified": "10.1.2",
     "chalk": "4.1.2",
     "rslog": "^1.1.0"
