--- a/packages/document/tsconfig.json
+++ b/packages/document/tsconfig.json
@@ -5,9 +5,10 @@
     "paths": {
       "i18n": ["./i18n.json"],
       "@/assets/*": ["./docs/public/*"],
-      "@/components/*": ["./components/*"],
+      "@/*": ["../theme-default/src/*", "./*"],
       "@zh/*": ["./docs/zh/*"],
-      "@en/*": ["./docs/en/*"]
+      "@en/*": ["./docs/en/*"],
+      "rspress/theme": ["../theme-default/src/index.ts"]
     }
   },
   "include": [
