--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -79,6 +79,7 @@
     "github-slugger": "^2.0.0",
     "globby": "11.1.0",
     "hast-util-from-html": "^1.0.0",
+    "hast-util-heading-rank": "^3.0.0",
     "html-to-text": "^9.0.3",
     "htmr": "^1.0.2",
     "is-html": "^3.0.0",
@@ -95,9 +96,7 @@
     "react-helmet-async": "^1.3.0",
     "react-lazy-with-preload": "^2.2.1",
     "react-syntax-highlighter": "^15.5.0",
-    "rehype-autolink-headings": "6.1.1",
     "rehype-external-links": "^2.0.1",
-    "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
     "remark": "^14.0.2",
     "remark-gfm": "3.0.1",
