fix: license for shared package

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -56,6 +56,7 @@
     "provenance": true,
     "registry": "https://registry.npmjs.org/"
   },
+  "license": "MIT",
   "files": [
     "bin",
     "dist"
