--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -56,9 +56,9 @@
     "@mdx-js/mdx": "2.2.1",
     "@mdx-js/react": "2.2.1",
     "@modern-js/utils": "2.41.0",
-    "@rsbuild/core": "0.0.0-next-20231207110454",
-    "@rsbuild/plugin-react": "0.0.0-next-20231207110454",
-    "@rsbuild/plugin-svgr": "0.0.0-next-20231207110454",
+    "@rsbuild/core": "0.2.0",
+    "@rsbuild/plugin-react": "0.2.0",
+    "@rsbuild/plugin-svgr": "0.2.0",
     "@rspress/theme-default": "workspace:*",
     "@rspress/runtime": "workspace:*",
     "@rspress/plugin-medium-zoom": "workspace:*",
