--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -51,8 +51,7 @@
     "chalk": "4.1.2",
     "rslog": "^1.1.0",
     "execa": "5.1.1",
-    "fs-extra": "11.2.0",
-    "globby": "14.0.0"
+    "fs-extra": "11.2.0"
   },
   "devDependencies": {
     "lodash-es": "^4.17.21",
