--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -111,7 +111,7 @@
     "yaml-front-matter": "^4.1.1"
   },
   "devDependencies": {
-    "tailwindcss": "3.2.7",
+    "tailwindcss": "^3.2.7",
     "@modern-js/plugin-tailwindcss": "2.42.0",
     "@modern-js/tsconfig": "2.42.0",
     "@modern-js/types": "2.42.0",
