--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -105,13 +105,13 @@
     "sirv": "^2.0.2",
     "source-map": "0.7.4",
     "string-replace-loader": "^3.1.0",
-    "tailwindcss": "3.2.7",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1",
     "unist-util-visit-children": "^2.0.1",
     "yaml-front-matter": "^4.1.1"
   },
   "devDependencies": {
+    "tailwindcss": "^3.2.7",
     "@modern-js/plugin-tailwindcss": "2.42.0",
     "@modern-js/tsconfig": "2.42.0",
     "@modern-js/types": "2.42.0",
