--- a/packages/plugin-playground/package.json
+++ b/packages/plugin-playground/package.json
@@ -64,7 +64,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "mdast-util-mdxjs-esm": "^1.3.0",
-    "prettier": "^2.6.2",
+    "@biomejs/biome": "1.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.8.1",
