--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -59,7 +59,7 @@
     "@types/react-dom": "^18",
     "husky": "^8",
     "lint-staged": "~13.1.0",
-    "prettier": "^2.6.2",
+    "@biomejs/biome": "1.5.2",
     "typescript": "^5"
   },
   "sideEffects": [
