--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -81,7 +81,7 @@
     "gray-matter": "4.0.3",
     "husky": "^8",
     "lint-staged": "~13.1.0",
-    "prettier": "^2.6.2",
+    "@biomejs/biome": "1.5.2",
     "typescript": "^5",
     "vite": "^4.0.5",
     "vitest": "0.33.0",
