--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -122,7 +122,7 @@
     "@types/yaml-front-matter": "^4.1.0",
     "husky": "^8",
     "lint-staged": "~13.1.0",
-    "prettier": "^2.6.2",
+    "@biomejs/biome": "1.5.2",
     "rimraf": "^3.0.2",
     "typescript": "^5",
     "vite": "^4.0.5",
