feat: add prettier for md(x) files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,18 @@
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true
   },
+  "[markdown]": {
+    "editor.formatOnType": true,
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[mdx]": {
+    "editor.formatOnType": true,
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
