--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -4,7 +4,7 @@
     "rootDir": "src",
     "baseUrl": ".",
     "skipLibCheck": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "esModuleInterop": true
   },
   "include": ["./src/**/*"]
