--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -18,13 +18,13 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "rspress": "workspace:*",
-    "ts-node": "^10.9.1",
-    "typescript": "^5",
-    "@types/react": "18.2.0",
     "@documate/documate": "^0.1.0",
     "@documate/react": "0.2.1",
-    "framer-motion": "10.16.4"
+    "@types/react": "18.2.0",
+    "framer-motion": "10.16.4",
+    "rspress": "workspace:*",
+    "ts-node": "^10.9.1",
+    "typescript": "^5"
   },
   "publishConfig": {
     "access": "public",
@@ -33,5 +33,8 @@
   },
   "files": [
     "docs"
-  ]
+  ],
+  "dependencies": {
+    "rsfamily-nav-icon": "^1.0.1"
+  }
 }
