feat: support doc style in demo iframe and improve the code

--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -22,7 +22,8 @@
       "default": "./dist/index.js"
     },
     "./node/*": "./dist/node/*",
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    "./bundle.css": "./dist/bundle.css"
   },
   "scripts": {
     "dev": "modern build -w",
