--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,6 +24,7 @@
     "./theme": {
       "default": "./theme.ts"
     },
+    "./theme.css": "./theme.css",
     "./runtime": {
       "default": "./runtime.ts"
     }
