--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -21,6 +21,7 @@
       "types": "./dist/bundle.d.ts",
       "default": "./dist/index.js"
     },
+    "./node/*": "./dist/node/*",
     "./package.json": "./package.json"
   },
   "scripts": {
