fix(document): style duplicating issue of rspress.dev #551 (#600)

--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -13,11 +13,16 @@
   "jsnext:source": "./src/index.ts",
   "types": "./dist/bundle.d.ts",
   "main": "./dist/index.js",
+  "imports": {
+    "#theme/*": "./src/*"
+  },
   "exports": {
     ".": {
       "types": "./dist/bundle.d.ts",
       "default": "./dist/index.js"
-    }
+    },
+    "./node/*": "./dist/node/*",
+    "./package.json": "./package.json"
   },
   "scripts": {
     "dev": "modern build -w",
