--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -36,7 +36,12 @@
   ],
   "dependencies": {
     "@mdx-js/mdx": "2.2.1",
+    "@rsbuild/core": "0.4.0",
+    "@rsbuild/plugin-solid": "0.4.0",
+    "@rsbuild/plugin-babel": "0.4.0",
+    "@rsbuild/plugin-react": "0.4.0",
     "@rspress/shared": "workspace:*",
+    "get-port": "6.1.2",
     "qrcode.react": "^3.1.0",
     "remark-gfm": "3.0.1",
     "rspack-plugin-virtual-module": "0.1.12",
@@ -60,7 +65,7 @@
   "peerDependencies": {
     "react": ">=17",
     "react-router-dom": "^6.8.1",
-    "@rspress/core": "^1.0.2"
+    "@rspress/core": "workspace:*"
   },
   "files": [
     "dist",
