--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -65,7 +65,7 @@
   "peerDependencies": {
     "react": ">=17",
     "react-router-dom": "^6.8.1",
-    "@rspress/core": "workspace:*"
+    "@rspress/core": "^1.0.2"
   },
   "files": [
     "dist",
