--- a/biome.json
+++ b/biome.json
@@ -25,7 +25,8 @@
       "compiled/**/*",
       "node_modules/**/*",
       "create-rspress/template/rspress.config.ts",
-      ".history/**/*"
+      ".history/**/*",
+      "coverage/**/*"
     ],
     "ignoreUnknown": true
   },
