--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -37,6 +37,7 @@
     "@rsbuild/plugin-babel": "0.4.11",
     "@rsbuild/plugin-react": "0.4.11",
     "@rspress/shared": "workspace:*",
+    "@rspress/theme-default": "workspace:*",
     "get-port": "6.1.2",
     "qrcode.react": "^3.1.0",
     "remark-gfm": "3.0.1",
