--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -63,7 +63,8 @@
     "react-helmet-async": "^1.3.0",
     "react-syntax-highlighter": "^15.5.0",
     "rspack-plugin-virtual-module": "0.1.12",
-    "string-replace-loader": "^3.1.0"
+    "string-replace-loader": "^3.1.0",
+    "react-transition-group": "4.4.5"
   },
   "devDependencies": {
     "@modern-js/plugin-tailwindcss": "2.48.1",
@@ -96,10 +97,7 @@
     "virtual-global-styles",
     "./src/styles/index.ts"
   ],
-  "files": [
-    "dist",
-    "src"
-  ],
+  "files": ["dist", "src"],
   "publishConfig": {
     "access": "public",
     "provenance": true,
