--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -53,7 +53,6 @@
     "github-slugger": "^2.0.0",
     "globby": "11.1.0",
     "hast-util-from-html": "^1.0.0",
-    "html-to-text": "^9.0.3",
     "htmr": "^1.0.2",
     "is-html": "^3.0.0",
     "lodash-es": "^4.17.21",
@@ -61,6 +60,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-markdown": "8.0.7",
     "react-syntax-highlighter": "^15.5.0",
     "rspack-plugin-virtual-module": "0.1.12",
     "string-replace-loader": "^3.1.0",
@@ -82,11 +82,11 @@
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.9",
     "gray-matter": "4.0.3",
+    "tailwindcss": "3.2.7",
     "typescript": "^5",
     "vite": "^4.0.5",
     "vitest": "0.33.0",
-    "webpack": "^5.88.1",
-    "tailwindcss": "3.2.7"
+    "webpack": "^5.88.1"
   },
   "sideEffects": [
     "*.css",
