--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -69,7 +69,6 @@
   "devDependencies": {
     "@modern-js/plugin-tailwindcss": "2.48.1",
     "@modern-js/tsconfig": "2.48.1",
-    "@modern-js/types": "2.48.1",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/hast": "^2.3.4",
     "@types/html-to-text": "^8.1.1",
@@ -97,7 +96,10 @@
     "virtual-global-styles",
     "./src/styles/index.ts"
   ],
-  "files": ["dist", "src"],
+  "files": [
+    "dist",
+    "src"
+  ],
   "publishConfig": {
     "access": "public",
     "provenance": true,
