--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,11 +1,13 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended"],
+  "extends": ["config:recommended", "schedule:weekly"],
   "packageRules": [
     // Use chore as semantic commit type for commit messages
     {
       "matchPackagePatterns": ["*"],
-      "semanticCommitType": "chore"
+      "semanticCommitType": "chore",
+      // always bump package.json
+      "rangeStrategy": "bump"
     },
     {
       "groupName": "rsbuild",
