--- a/e2e/fixtures/modern-js/package.json
+++ b/e2e/fixtures/modern-js/package.json
@@ -9,17 +9,7 @@
   "scripts": {
     "dev": "modern dev",
     "build": "modern build",
-    "build:watch": "modern build -w",
-    "reset": "rimraf ./**/node_modules",
-    "lint": "modern lint",
-    "change": "modern change",
-    "bump": "modern bump",
-    "pre": "modern pre",
-    "change-status": "modern change-status",
-    "gen-release-note": "modern gen-release-note",
-    "release": "modern release",
-    "new": "modern new",
-    "upgrade": "modern upgrade"
+    "build:watch": "modern build -w"
   },
   "exports": {
     ".": {
@@ -37,13 +27,10 @@
   },
   "devDependencies": {
     "@modern-js/plugin-rspress": "workspace:*",
-    "@types/jest": "^29",
     "@types/node": "~16.11.7",
     "@types/react": "~18.0.26",
-    "antd": "5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rimraf": "~3.0.2",
     "typescript": "^5"
   },
   "peerDependencies": {
