--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -22,6 +22,8 @@
     "@documate/react": "0.2.1",
     "@types/react": "18.2.0",
     "framer-motion": "10.16.4",
+    "rsbuild-plugin-google-analytics": "^1.0.0",
+    "rsbuild-plugin-open-graph": "^1.0.0",
     "rspress": "workspace:*",
     "ts-node": "^10.9.1",
     "typescript": "^5"
