--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bump": "modern bump",
     "pre": "modern pre",
     "prepare": "npm run build && husky install",
+    "check-spell": "npx cspell",
     "dev": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run-many -t dev --exclude @rspress-fixture/*",
     "build": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run-many -t build --exclude @rspress-fixture/*",
     "test": "pnpm test:unit && pnpm test:e2e",
@@ -52,19 +53,20 @@
     "@playwright/test": "1.33.0",
     "@types/cross-spawn": "^6.0.2",
     "@types/fs-extra": "^11.0.1",
-    "cross-spawn": "^7.0.3",
     "cross-env": "^7.0.3",
+    "cross-spawn": "^7.0.3",
+    "cspell-ban-words": "^0.0.3",
     "execa": "8.0.1",
     "fs-extra": "^11.1.1",
     "get-port": "5.0.0",
     "husky": "^8.0.0",
     "lint-staged": "~13.1.0",
+    "nx": "17.0.2",
     "playwright": "1.33.0",
+    "prettier": "3.2.2",
     "tree-kill": "^1.2.2",
     "ts-node": "^10.9.1",
-    "vitest": "0.34.1",
-    "nx": "17.0.2",
-    "prettier": "3.2.2"
+    "vitest": "0.34.1"
   },
   "publishConfig": {
     "access": "public",
