fix(#848, plugin-auto-nav-sidebar, doc) added documentation, fixed globby import, fixed empty folder appearing in sidebars, fixed changeset

--- a/packages/plugin-auto-nav-sidebar/package.json
+++ b/packages/plugin-auto-nav-sidebar/package.json
@@ -57,6 +57,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@rspress/shared": "workspace:*"
+    "@rspress/shared": "workspace:*",
+    "globby": "11.1.0"
   }
 }
