chore: no need to peer depend on @types/react

--- a/packages/plugin-rss/package.json
+++ b/packages/plugin-rss/package.json
@@ -52,8 +52,7 @@
   },
   "peerDependencies": {
     "react": ">=17.0.0",
-    "rspress": "^1.17.0",
-    "@types/react": ">=17.0.0"
+    "rspress": "^1.17.0"
   },
   "files": [
     "dist",
