chore(workflow): use changeset CLI as release tools

--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "private": true,
   "name": "monorepo",
   "scripts": {
-    "new": "modern new",
-    "reset": "modern clear",
-    "change": "modern change",
-    "bump": "modern bump",
-    "pre": "modern pre",
+    "change": "changeset",
+    "changeset": "changeset",
     "prepare": "npm run build && husky install",
     "check-spell": "npx cspell",
     "dev": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run-many -t dev --exclude @rspress-fixture/*",
@@ -14,12 +11,7 @@
     "test": "pnpm test:unit && pnpm test:e2e",
     "test:unit": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run-many -t test --exclude @rspress-fixture/*",
     "test:e2e": "playwright test",
-    "change-status": "modern change-status",
-    "gen-release-note": "modern gen-release-note",
-    "release": "modern release",
-    "deploy": "modern deploy",
     "lint": "biome lint . --diagnostic-level=warn",
-    "upgrade": "modern upgrade",
     "dev:website": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run @rspress/docs:dev",
     "build:website": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run @rspress/docs:build",
     "preview:website": "cd packages/document && npm run preview",
@@ -45,10 +37,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
+    "@changesets/cli": "^2.27.1",
     "@manypkg/get-packages": "^2.2.0",
     "@modern-js/generator-utils": "3.3.15",
     "@modern-js/module-tools": "2.48.4",
-    "@modern-js/monorepo-tools": "2.48.4",
     "@modern-js/tsconfig": "2.48.4",
     "@playwright/test": "1.33.0",
     "@types/cross-spawn": "^6.0.2",
