--- a/.github/workflows/release-pull-request-without-modernjs.yml
+++ b/.github/workflows/release-pull-request-without-modernjs.yml
@@ -55,7 +55,7 @@ jobs:
           version: ${{ github.event.inputs.version || 'latest' }}
           versionNumber: 'auto'
           type: 'pull request'
-          tools: 'modern'
+          tools: 'changeset'
         env:
           GITHUB_TOKEN: ${{ secrets.REPO_SCOPED_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
