--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "@modern-js/tsconfig": "2.49.0",
     "@playwright/test": "1.33.0",
     "@types/cross-spawn": "^6.0.2",
-    "@types/fs-extra": "^11.0.1",
+    "@types/fs-extra": "11.0.4",
     "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
     "cspell-ban-words": "^0.0.3",
     "execa": "8.0.1",
-    "fs-extra": "^11.1.1",
+    "fs-extra": "11.2.0",
     "get-port": "5.1.1",
     "husky": "^8.0.0",
     "lint-staged": "~13.1.0",
