--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -22,36 +22,36 @@
     "node": ">=14.17.6"
   },
   "dependencies": {
-    "@mdx-js/mdx": "2.3.0",
+    "@mdx-js/mdx": "3.0.1",
     "@rsbuild/core": "0.6.1",
-    "@rsbuild/plugin-solid": "0.6.1",
     "@rsbuild/plugin-babel": "0.6.1",
     "@rsbuild/plugin-react": "0.6.1",
+    "@rsbuild/plugin-solid": "0.6.1",
     "@rspress/shared": "workspace:*",
     "@rspress/theme-default": "workspace:*",
     "get-port": "6.1.2",
+    "lodash": "4.17.21",
     "qrcode.react": "^3.1.0",
-    "remark-gfm": "3.0.1",
-    "lodash": "4.17.21"
+    "remark-gfm": "4.0.0"
   },
   "devDependencies": {
-    "@types/mdast": "^3.0.10",
-    "@types/node": "^18.11.17",
     "@types/lodash": "4.17.0",
+    "@types/mdast": "^4.0.3",
+    "@types/node": "^18.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "mdast-util-mdxjs-esm": "^1.3.0",
+    "mdast-util-mdxjs-esm": "^2.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.8.1",
     "typescript": "^5",
-    "unified": "^10.1.2",
-    "unist-util-visit": "^4.1.1"
+    "unified": "^11.0.4",
+    "unist-util-visit": "^5.0.0"
   },
   "peerDependencies": {
+    "@rspress/core": "^1.0.2",
     "react": ">=17",
-    "react-router-dom": "^6.8.1",
-    "@rspress/core": "^1.0.2"
+    "react-router-dom": "^6.8.1"
   },
   "files": [
     "dist",
