--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -52,14 +52,14 @@
   },
   "dependencies": {
     "@rsbuild/core": "0.6.1",
-    "unified": "10.1.2",
     "chalk": "4.1.2",
     "execa": "5.1.1",
     "fs-extra": "11.2.0",
-    "gray-matter": "4.0.3"
+    "gray-matter": "4.0.3",
+    "unified": "11.0.4"
   },
   "devDependencies": {
-    "lodash-es": "^4.17.21",
+    "@types/fs-extra": "11.0.4",
     "@types/interpret": "^1.1.1",
     "@types/jest": "~29.2.4",
     "@types/lodash": "^4.17.0",
@@ -67,11 +67,11 @@
     "@types/node": "~16.11.7",
     "@types/react": "~18.0.26",
     "@types/rechoir": "^0.6.1",
+    "lodash-es": "^4.17.21",
+    "medium-zoom": "1.0.8",
     "rimraf": "~3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "~5.0.4",
-    "medium-zoom": "1.0.8",
-    "@types/fs-extra": "11.0.4"
+    "typescript": "~5.0.4"
   },
   "sideEffects": [],
   "publishConfig": {
