--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -52,7 +52,7 @@
   },
   "dependencies": {
     "@rsbuild/core": "0.6.1",
-    "unified": "10.1.2",
+    "unified": "^10.1.2",
     "chalk": "4.1.2",
     "execa": "5.1.1",
     "fs-extra": "11.2.0",
@@ -64,13 +64,13 @@
     "@types/jest": "~29.2.4",
     "@types/lodash": "^4.17.0",
     "@types/lodash-es": "^4.17.8",
-    "@types/node": "~16.11.7",
-    "@types/react": "~18.0.26",
+    "@types/node": "^18.11.17",
+    "@types/react": "^18",
     "@types/rechoir": "^0.6.1",
-    "rimraf": "~3.0.2",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "~5.0.4",
-    "medium-zoom": "1.1.0",
+    "typescript": "^5",
+    "medium-zoom": "1.0.8",
     "@types/fs-extra": "11.0.4"
   },
   "sideEffects": [],
