--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -93,19 +93,19 @@
     "@modern-js/plugin-tailwindcss": "2.49.0",
     "@modern-js/tsconfig": "2.49.0",
     "@types/body-scroll-lock": "^3.1.0",
-    "@types/hast": "^2.3.4",
+    "@types/hast": "3.0.3",
     "@types/html-to-text": "^8.1.1",
-    "@types/jest": "^26.0.9",
-    "@types/lodash-es": "^4.17.6",
+    "@types/jest": "~29.2.4",
+    "@types/lodash-es": "^4.17.8",
     "@types/mdast": "^3.0.10",
-    "@types/node": "^14",
+    "@types/node": "^18.11.17",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/yaml-front-matter": "^4.1.0",
     "rimraf": "^3.0.2",
     "typescript": "^5",
-    "vitest": "0.33.0",
+    "vitest": "0.34.1",
     "webpack": "^5.88.1"
   },
   "sideEffects": [
