--- a/packages/create-rspress/package.json
+++ b/packages/create-rspress/package.json
@@ -22,13 +22,13 @@
   },
   "devDependencies": {
     "@types/jest": "~29.2.4",
-    "@types/node": "~16.11.7",
+    "@types/node": "^18.11.17",
     "@types/prompts": "^2.4.4",
-    "@types/react": "~18.0.26",
+    "@types/react": "^18",
     "@types/fs-extra": "11.0.4",
-    "rimraf": "~3.0.2",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "~5.0.4",
+    "typescript": "^5",
     "cac": "6.7.14",
     "chalk": "5.3.0",
     "fs-extra": "11.2.0",
