--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@documate/documate": "^0.1.0",
     "@documate/react": "0.2.1",
-    "@types/react": "18.2.0",
+    "@types/react": "^18",
     "framer-motion": "10.18.0",
     "rsbuild-plugin-google-analytics": "^1.0.0",
     "rsbuild-plugin-open-graph": "^1.0.0",
