--- a/packages/plugin-shiki/package.json
+++ b/packages/plugin-shiki/package.json
@@ -29,10 +29,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "typescript": "^5",
-    "vitest": "0.33.0",
+    "vitest": "0.34.1",
     "react": "^18.2.0",
     "@types/hast": "3.0.3",
-    "unified": "10.1.2"
+    "unified": "^10.1.2"
   },
   "sideEffects": [
     "*.css",
