--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@modern-js/tsconfig": "2.49.0",
-    "@types/jest": "^26.0.9",
+    "@types/jest": "~29.2.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "typescript": "^5"
