--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -60,11 +60,11 @@
     "@modern-js/plugin-tailwindcss": "2.49.0",
     "@modern-js/tsconfig": "2.49.0",
     "@types/body-scroll-lock": "^3.1.0",
-    "@types/hast": "^2.3.4",
+    "@types/hast": "3.0.3",
     "@types/html-to-text": "^8.1.1",
     "@types/is-html": "^2.0.1",
-    "@types/jest": "^26.0.9",
-    "@types/lodash-es": "^4.17.6",
+    "@types/jest": "~29.2.4",
+    "@types/lodash-es": "^4.17.8",
     "@types/mdast": "^3.0.10",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18",
@@ -72,9 +72,9 @@
     "@types/react-syntax-highlighter": "^15.5.9",
     "gray-matter": "4.0.3",
     "typescript": "^5",
-    "vitest": "0.33.0",
+    "vitest": "0.34.1",
     "webpack": "^5.88.1",
-    "tailwindcss": "3.2.7"
+    "tailwindcss": "^3.2.7"
   },
   "sideEffects": [
     "*.css",
