--- a/e2e/fixtures/with-base/package.json
+++ b/e2e/fixtures/with-base/package.json
@@ -8,7 +8,7 @@
     "preview": "rspress preview"
   },
   "devDependencies": {
-    "rspress": "workspace:*",
-    "@types/node": "^14"
+    "@types/node": "^14",
+    "rspress": "workspace:*"
   }
 }
