--- a/packages/modern-plugin-rspress/package.json
+++ b/packages/modern-plugin-rspress/package.json
@@ -35,8 +35,8 @@
   },
   "dependencies": {
     "@rspress/core": "workspace:*",
-    "@rspress/plugin-preview": "workspace:*",
-    "@rspress/plugin-api-docgen": "workspace:*"
+    "@rspress/plugin-api-docgen": "workspace:*",
+    "@rspress/plugin-preview": "workspace:*"
   },
   "devDependencies": {
     "@modern-js/utils": "2.51.0",
