--- a/packages/plugin-last-updated/package.json
+++ b/packages/plugin-last-updated/package.json
@@ -28,9 +28,9 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "react": "^18.2.0",
     "typescript": "^5",
-    "vitest": "0.34.1",
-    "react": "^18.2.0"
+    "vitest": "0.34.1"
   },
   "dependencies": {
     "@rspress/shared": "workspace:*"
