--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -23,22 +23,22 @@
   },
   "dependencies": {
     "@mdx-js/mdx": "2.3.0",
-    "@rsbuild/core": "0.7.0",
-    "@rsbuild/plugin-less": "0.7.0",
-    "@rsbuild/plugin-sass": "0.7.0",
-    "@rsbuild/plugin-solid": "0.7.0",
-    "@rsbuild/plugin-babel": "0.7.0",
-    "@rsbuild/plugin-react": "0.7.0",
+    "@rsbuild/core": "0.7.3",
+    "@rsbuild/plugin-babel": "0.7.3",
+    "@rsbuild/plugin-less": "0.7.3",
+    "@rsbuild/plugin-react": "0.7.3",
+    "@rsbuild/plugin-sass": "0.7.3",
+    "@rsbuild/plugin-solid": "0.7.3",
     "@rspress/shared": "workspace:*",
     "@rspress/theme-default": "workspace:*",
+    "lodash": "4.17.21",
     "qrcode.react": "^3.1.0",
-    "remark-gfm": "3.0.1",
-    "lodash": "4.17.21"
+    "remark-gfm": "3.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/mdast": "^3.0.10",
     "@types/node": "^18.11.17",
-    "@types/lodash": "^4.17.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "mdast-util-mdxjs-esm": "^1.3.0",
