--- a/packages/plugin-shiki/package.json
+++ b/packages/plugin-shiki/package.json
@@ -25,14 +25,14 @@
   },
   "devDependencies": {
     "@modern-js/tsconfig": "2.51.0",
+    "@types/hast": "3.0.3",
     "@types/node": "^18.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
-    "vitest": "0.34.1",
     "react": "^18.2.0",
-    "@types/hast": "3.0.3",
-    "unified": "^10.1.2"
+    "typescript": "^5",
+    "unified": "^10.1.2",
+    "vitest": "0.34.1"
   },
   "sideEffects": [
     "*.css",
@@ -50,9 +50,9 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "shiki": "0.14.5",
-    "unist-util-visit": "5.0.0",
+    "@rspress/shared": "workspace:*",
     "hast-util-from-html": "2.0.1",
-    "@rspress/shared": "workspace:*"
+    "shiki": "0.14.5",
+    "unist-util-visit": "5.0.0"
   }
 }
