--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -53,8 +53,8 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-syntax-highlighter": "^15.5.0",
-    "rspack-plugin-virtual-module": "0.1.12",
-    "react-transition-group": "4.4.5"
+    "react-transition-group": "4.4.5",
+    "rspack-plugin-virtual-module": "0.1.12"
   },
   "devDependencies": {
     "@modern-js/plugin-tailwindcss": "2.51.0",
@@ -71,10 +71,10 @@
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
     "gray-matter": "4.0.3",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5",
     "vitest": "0.34.1",
-    "webpack": "^5.91.0",
-    "tailwindcss": "^3.4.3"
+    "webpack": "^5.91.0"
   },
   "sideEffects": [
     "*.css",
