chore: update pnpm-lock.yml

--- a/packages/plugin-rss/package.json
+++ b/packages/plugin-rss/package.json
@@ -43,7 +43,7 @@
   },
   "peerDependencies": {
     "react": ">=17.0.0",
-    "rspress": "^1.17.0"
+    "rspress": "workspace:*"
   },
   "files": [
     "dist",
