--- a/packages/plugin-client-redirects/package.json
+++ b/packages/plugin-client-redirects/package.json
@@ -34,7 +34,7 @@
     "vitest": "0.34.1"
   },
   "peerDependencies": {
-    "@rspress/runtime": "^1.0.2"
+    "@rspress/runtime": "workspace:*"
   },
   "sideEffects": [
     "*.css",
