--- a/packages/plugin-playground/package.json
+++ b/packages/plugin-playground/package.json
@@ -59,7 +59,7 @@
     "unist-util-visit": "^4.1.1"
   },
   "peerDependencies": {
-    "@rspress/core": "^1.0.2",
+    "@rspress/core": "workspace:*",
     "react": ">=17.0.0",
     "react-router-dom": "^6.8.1"
   },
