--- a/packages/plugin-api-docgen/package.json
+++ b/packages/plugin-api-docgen/package.json
@@ -45,7 +45,7 @@
   "peerDependencies": {
     "react": ">=17.0.0",
     "react-router-dom": "^6.8.1",
-    "@rspress/core": "workspace:*",
+    "@rspress/core": "workspace:^1.0.2",
     "typescript": "^5.5.3"
   },
   "peerDependenciesMeta": {
