fix(deps): unpin Rsbuild to allow automatic patch upgrade

--- a/e2e/fixtures/plugin-shiki/package.json
+++ b/e2e/fixtures/plugin-shiki/package.json
@@ -8,8 +8,8 @@
     "preview": "rspress preview"
   },
   "dependencies": {
-    "rspress": "workspace:*",
-    "@rspress/plugin-shiki": "workspace:*"
+    "@rspress/plugin-shiki": "workspace:*",
+    "rspress": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^18.11.17"
