--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -23,12 +23,12 @@
   },
   "dependencies": {
     "@mdx-js/mdx": "2.3.0",
-    "@rsbuild/core": "1.0.13",
-    "@rsbuild/plugin-babel": "1.0.1",
-    "@rsbuild/plugin-less": "1.0.1",
-    "@rsbuild/plugin-react": "1.0.3",
-    "@rsbuild/plugin-sass": "1.0.2",
-    "@rsbuild/plugin-solid": "1.0.2",
+    "@rsbuild/core": "~1.0.14",
+    "@rsbuild/plugin-babel": "~1.0.2",
+    "@rsbuild/plugin-less": "~1.0.2",
+    "@rsbuild/plugin-react": "~1.0.4",
+    "@rsbuild/plugin-sass": "~1.0.3",
+    "@rsbuild/plugin-solid": "~1.0.3",
     "@rspress/shared": "workspace:*",
     "@rspress/theme-default": "workspace:*",
     "lodash": "4.17.21",
