--- a/packages/modern-plugin-rspress/tsconfig.json
+++ b/packages/modern-plugin-rspress/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "@modern-js/tsconfig/base",
-  "compilerOptions": {
-    "declaration": false,
-    "jsx": "preserve",
-    "baseUrl": "./"
-  },
-  "include": ["src", "static", "modern.config.ts"]
+	"extends": "@modern-js/tsconfig/base",
+	"compilerOptions": {
+		"declaration": false,
+		"jsx": "preserve",
+		"baseUrl": "./"
+	},
+	"include": ["src", "static", "rslib.config.ts"]
 }
